--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -6,7 +6,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  // overflow: hidden;
+  overflow-x: hidden;
   font-family: Rubik, sans-serif;
   font-size: 16px;
   line-height: 11px;
